2016-01-18  Colin Watson  <cjwatson@debian.org>

	* src/prefs.h (DEFAULT_SUB_PAGE_URL, DEFAULT_PAGE_URL): Remove
	unused definitions.

2014-10-11  Colin Watson  <cjwatson@debian.org>

	* src/gui.h (struct _TgGui): Remove unused eventbox element.

2014-10-11  Colin Watson  <cjwatson@debian.org>

	Declare functions as (void) rather than () to indicate no arguments.

2014-10-11  Colin Watson  <cjwatson@debian.org>

	* .gitignore: Add *~ and compile.

2014-10-11  Colin Watson  <cjwatson@debian.org>

	* src/gui.c (tg_gui_cb_drag): Remove unused function.
	* src/gui.h (tg_gui_cb_drag): Remove prototype.

2014-10-11  Colin Watson  <cjwatson@debian.org>

	Rename principal structures to Tg* and all functions to tg_*, in
	preparation for converting everything to a more conventional GObject
	structure.  No functional changes.

2013-02-01  Colin Watson  <cjwatson@debian.org>

	Reorder functions to allow making more of them static.  Remove some
	prototypes for non-existent functions.

2013-02-01  Colin Watson  <cjwatson@debian.org>

	* src/gui.c (load_channels_from_config, cb_quit): Cast channel_free
	to GDestroyNotify.

2013-02-01  Colin Watson  <cjwatson@debian.org>

	Use more modern memory-freeing functions.

	* src/gui.c (load_channels_from_config, cb_quit): Use
	g_slist_free_full.
	* src/pixpack.c (pixpack_destroy): Use g_clear_object and
	g_clear_pointer.
	* src/prefs.c (prefs_cancel_cb): Likewise.
	* src/view.c (tele_view_free): Use g_clear_object.
	* configure.ac (PKG_CHECK_MODULES): Require glib-2.0 >= 2.34 for
	g_clear_pointer.

2010-11-03  Colin Watson  <cjwatson@debian.org>

	Port from GnomeVFS to GIO.

	* configure.ac (PKG_CHECK_MODULES): Check for gio-2.0 rather than
	gnome-vfs-2.0.
	* src/http.c (get_the_image): Fetch the image using GIO.
	* NEWS: Document this.

2010-11-03  Colin Watson  <cjwatson@debian.org>

	Build cleanly with -DGSEAL_ENABLE.

	* configure.ac (PKG_CHECK_MODULES): Bump gtk+-2.0 requirement to
	2.20.